# lain-claude-patcher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: demo.webm  io-claude-theme.js
src/: main.rs
src-ui/: README.md  header.txt  panel.css
src-ui/parts/: 01-state.js  02-colors.js  03-claude-css.js  04-live.js  05-panel.js  06-pill.js
tools/: build-theme-payload.mjs
