[package]
name = "lain-claude-patcher"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
asar = "0.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset"] }
walkdir = "2.5"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console"] }

[build-dependencies]
winresource = "0.1"
